# HashOwl

./: .gitignore  CLAUDE.md  CMakeLists.txt  HashOwl_FullContext.txt  MergeCode.ps1  main.cpp  readme.md
HashEngines/: BcryptEngine.cpp  BcryptEngine.h  Crc32Engine.cpp  Crc32Engine.h  Crc64Engine.cpp  Crc64Engine.h  CrcEngine.h  HashFactory.h  HashUtils.cpp  HashUtils.h  IHashEngine.h  LibDeflateCrc32Engine.h  SimdCrc32cEngine.cpp
Scanner/: Scanner.cpp  Scanner.h
include/: indicators.hpp
src/: CMakeLists.txt  ProgressBar.h  main.cpp
src/HashEngines/: Blake3Engine.h  HashFactory.h  HashUtils.cpp  SimdCrc32cEngine.cpp  SimdCrc32cEngine.h
src/Scanner/: Scanner.cpp  Scanner.h  ThreadPool.h  Verifier.cpp  Verifier.h
tests/: CMakeLists.txt  benchmark_crc.cpp  hash_utils_tests.cpp  scanner_verifier_tests.cpp
